--- a/client/app/list/list.html
+++ b/client/app/list/list.html
@@ -1,42 +1,46 @@
 <div ng_include='"components/navbar/navbar.html"'> </div>
 <div class="container ng-scope">
-  <div class="col-sm-8">
-    <h2>List Employees</h2>
-    <br>
-    <br>
-    <div class="limit-overflow">
-      <table class ="table">
-        <tbody>
-          <tr>
-          <th>First Name</th>
-        	<th>Last Name</th>
-        	<th>Email</th>
-          <th>Company</th>
-          </tr>
-          <tr ng-repeat="employee in employees track by $index" class="ng-scope">
-            <td>{{employee.first_name}}</td>
-            <td>{{employee.last_name}}</td>
-            <td>{{employee.email}}</td>
-            <td>{{employee.company}}</td>
-             <td>
-            <button ng-click="viewEmployee(employee)" class="btn btn-success" style="margin-right:0.1em;">
-            "View"
-              <span class="glyphicon glyphicon-th-list"></span>
-            </button>
+  <div class = "row avenir-db">
+    <div class="col-sm-8">
+      <h2>List Employees</h2>
+      <br>
+      <br>
+      <div class="limit-overflow">
+        <table class ="table">
+          <tbody>
+            <tr>
+            <th>No</th>
+            <th>First Name</th>
+          	<th>Last Name</th>
+          	<th>Email</th>
+            <th>Company</th>
+            </tr>
+            <tr ng-repeat="employee in employees track by $index" class="ng-scope">
+              <td>{{$index+1}}</td>
+              <td>{{employee.first_name}}</td>
+              <td>{{employee.last_name}}</td>
+              <td>{{employee.email}}</td>
+              <td>{{employee.company}}</td>
+               <td>
+              <button ng-click="viewEmployee(employee)" class="btn btn-success" style="margin-right:0.1em;">
+              "View"
+                <span class="glyphicon glyphicon-th-list"></span>
+              </button>
 
-            <button ng-click="editEmployee(employee)" class="btn bnt-info" style="margin-right:0.1em;">
-            "Edit"
-              <span class="glyphicon glyphicon-edit"></span>
-            </button>
+              <button ng-click="editEmployee(employee)" class="btn bnt-info" style="margin-right:0.1em;">
+              "Edit"
+                <span class="glyphicon glyphicon-edit"></span>
+              </button>
 
-            <button ng-click="deleteEmployee(employee,$index)" class="btn btn-danger" style="margin-right:0.1em;">
-            "Delete"
-              <span class="glyphicon glyphicon-trash"></span>
-            </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+              <button ng-click="deleteEmployee(employee,$index)" class="btn btn-danger" style="margin-right:0.1em;">
+              "Delete"
+                <span class="glyphicon glyphicon-trash"></span>
+              </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
