Changed based url from index.html

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <base href="/">
+    <base href="/list">
     <title>Test Project</title>
     <meta name="description" content="Test.">
     <meta name="viewport" content="width=device-width">
