--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,8 @@
     <![endif]-->
     <!--<navbar></navbar> -->
     <!--<categories-menu></categories-menu> -->
-    <div ng-view=""></div> 
+    <!-- <div ng-view=""></div>  -->
+    <div ui-view=""></div>
     <!--<div ui-view=""></div> -->
     <!--<sw-footer></sw-footer> -->
     <!--[if lt IE 9]>
@@ -81,6 +82,7 @@
       <script src="app/list/list.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/service/employee.service.js"></script>
       <script src="app/view/view.controller.js"></script>
       <script src="app/view/view.js"></script>
       <script src="components/employeeHelper/employeeHelper.service.js"></script>
