--- a/client/app/edit/edit.html
+++ b/client/app/edit/edit.html
@@ -4,34 +4,34 @@
     <h2>Edit Employees</h2>
     <br>
     <br>
-    <div class="col-sm-6 center-block">
-        <form style="width:100%" ng-model="currentEmployee" name="addForm" ng-submit="saveEmployee(currentEmployee)" novalidate="true">
+    <div class="col-sm-6 center-block"  ng-controller="EditCtrl as editCtrl" >
+        <form style="width:100%" ng-model="editCtrl.currentEmployee" name="addForm" ng-submit="saveEmployee(editCtrl.currentEmployee)" novalidate="true">
           
           <!-- First NAME -->
           <div class="form-group" ng-class="{ 'has-error' : addForm.first_name.$invalid && !addForm.first_name.$pristine }">
             <label>First Name</label>
-            <input placeholder="First Name" type="text" name="first_name" class="form-control" ng-model="currentEmployee.first_name" ng-maxlength="150" required>
+            <input placeholder="First Name" type="text" name="first_name" class="form-control" ng-model="editCtrl.currentEmployee.first_name" ng-maxlength="150" required>
             <p ng-show="addForm.first_name.$invalid && !addForm.first_name.$pristine" class="help-block">First Name is  required.</p>
             <p ng-show="addForm.first_name.$error.maxlength" class="help-block">Last Name is  too long.</p>
           </div>
      <!-- Last NAME -->
           <div class="form-group" ng-class="{ 'has-error' : addForm.last_name.$invalid && !addForm.last_name.$pristine }">
             <label>Last Name</label>
-            <input placeholder="Last Name" type="text" name="last_name" class="form-control" ng-model="currentEmployee.last_name" ng-maxlength="150"  required>
+            <input placeholder="Last Name" type="text" name="last_name" class="form-control" ng-model="editCtrl.currentEmployee.last_name" ng-maxlength="150"  required>
             <p ng-show="addForm.last_name.$invalid && !addForm.last_name.$pristine" class="help-block">Last Name is  required.</p>
             <p ng-show="addForm.last_name.$error.maxlength" class="help-block">Last Name is  too long.</p>
           </div>
     <!-- Mail -->
           <div class="form-group" ng-class="{ 'has-error' : addForm.email.$invalid && !addForm.email.$pristine }">
             <label>Email</label>
-            <input placeholder="Email" type="email" name="email" ng-model="currentEmployee.email" class="form-control" ng-maxlength="150" required>
+            <input placeholder="Email" type="email" name="email" ng-model="editCtrl.currentEmployee.email" class="form-control" ng-maxlength="150" required>
             <p ng-show="addForm.email.$invalid && !addForm.email.$pristine" class="help-block">Please input valid type of email address.</p>
             <p ng-show="addForm.email.$error.maxlength" class="help-block">Email is  too long.</p>
           </div>
         <!-- Company-->
           <div class="form-group" ng-class="{ 'has-error' : addForm.company.$invalid && !addForm.company.$pristine }">
             <label>Company</label>
-            <input placeholder="Company" type="text" name="company" ng-model="currentEmployee.company" class="form-control" ng-maxlength="75" required>
+            <input placeholder="Company" type="text" name="company" ng-model="editCtrl.currentEmployee.company" class="form-control" ng-maxlength="75" required>
             <p ng-show="addForm.company.$invalid && !addForm.company.$pristine" class="help-block">Email is  required. </p>
             <p ng-show="addForm.company.$error.maxlength" class="help-block">Company name is  too long.</p>
           </div>
